# RayTracing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Disc.txt  Disc.txt~  Disc.xcf  Frame1.txt  Frame2.txt  LICENSE  Makefile  README.md  RayTracing  analyze.py  analyze.py~  cmake_install.cmake  combine_img.py~  frame.py~  png_to_txt.py  png_to_txt.py~
RayTracing/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  combine_img.py  frame.py
RayTracing/src/: Color.hpp~  Game.hpp~  Point.cpp  Relativity.hpp~  notes.txt~
helpers/: GenerateGeometry.py  combine_img.py  frame.py  png_to_txt.py  sum.py
src/: #Final.png#  Color.hpp  Game.cpp~  Geometry.hpp  Object.hpp  Object.hpp~  Point.hpp  Point.hpp~  Relativity.hpp  main.cpp  main.cpp~  notes.txt
